--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.5.0",
     "react-router-dom": "^6.5.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
