--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.5.0",
     "react-router-dom": "^6.5.0",
+    "simple-zustand-devtools": "^1.1.0",
     "styled-components": "^6.0.8",
     "zustand": "^4.4.3"
   },
