--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router": "^6.5.0",
     "react-router-dom": "^6.5.0",
     "simple-zustand-devtools": "^1.1.0",
+    "slugify": "^1.6.6",
     "styled-components": "^6.0.8",
     "zustand": "^4.4.3"
   },
